examples/errors/syntax08.cpp
#include <stdio.h>

int main()
{
	for(int i=0;i<5;i++)
	{{ // TODO: more informative error message
		printf("%i\n",i);
	}
    return 0;
}

